--- a/CSS/site.css
+++ b/CSS/site.css
@@ -12,10 +12,11 @@ context or relation to other document tree elements)
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+/*    font-family: 'Lato', sans-serif;*/
+    font-family: 'Prata', serif; 
     font-weight: 300;
-    background-color: whitesmoke;
-
+/*    background-color: whitesmoke;*/
+    background-color: ghostwhite;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -51,6 +52,67 @@ h1, h2, h3, h4, h5, h6 {
     padding: 18px 15px;
 }
 
+/*----------- Image slideshow CSS styling (Adapted from ttps://www.w3schools.com/howto/howto_js_slideshow.asp) -----------*/
 .fadeSlide {
     display: none;
+}
+
+.introSlideshow img { 
+    vertical-align: middle;
+    width: 100%; 
+}
+
+.introSlideshow {
+    max-width: 100%; 
+    position: relative; 
+    margin: auto; 
+    padding: 50px;
+    background-color: white; 
+}
+
+.imageCaption {
+    background-color: #262626;
+    color: whitesmoke;
+    font-size: 30px;
+    padding: 20px 20px;
+    position: absolute; 
+    bottom: 600px;
+    text-align: center;
+}
+
+/* CSS Style for slideshow animations - Fading to next picture */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    } 
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    } 
+    to {
+        opacity: 1
+    }
+}
+/*-----------------------------------------------*/
+
+#navigationBarSlideshowSeparator {
+    width: 1000px;
+    margin-top: 15px;
+    margin-bottom: -5px;
+    opacity: 85%;
+    border: none;
+    background-color: #262626;
+    height: 5px;
 }
