--- a/CSS/site.css
+++ b/CSS/site.css
@@ -6,113 +6,53 @@ Notes:
 context or relation to other document tree elements)
 */
 
-.main {
-    width: 1200px; 
-    margin: auto; 
-}
-
-body {
-/*    font-family: 'Lato', sans-serif;*/
+.navbar-brand {
     font-family: 'Prata', serif; 
-    font-weight: 300;
-/*    background-color: whitesmoke;*/
-    background-color: ghostwhite;
+    font-size: 38px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.container-fluid {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.navbar-nav {
     font-family: 'Prata', serif;
+    font-size: 16px;
+    font-weight: 800;
 }
 
-.navigationBar {
-    background-color: white;
-    overflow: hidden;
-    padding: 15px 15px;
-
-}
-
-.navigationBar a { 
-    float: right; 
-    padding: 18px 15px;
-    color: black; 
-    font-family: 'Prata', serif;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.navigationBar h1 {
-    font-size: 35px;
-    display: inline-block;
-    padding: 5px;
+.navbar-nav > li { 
     padding-left: 10px;
+    padding-right: 10px;
+        
 }
 
-
-.navigationBarLinks {
-    float: right;
-    padding: 18px 15px;
+.carouselContainer {
+    padding: 35px;
 }
 
-/*----------- Image slideshow CSS styling (Adapted from ttps://www.w3schools.com/howto/howto_js_slideshow.asp) -----------*/
-.fadeSlide {
-    display: none;
-}
-
-.introSlideshow img { 
-    vertical-align: middle;
-    width: 100%; 
-}
-
-.introSlideshow {
-    max-width: 100%; 
-    position: relative; 
-    margin: auto; 
-    padding: 50px;
-    background-color: white; 
-}
-
-.imageCaption {
+.carousel-caption { 
     background-color: #262626;
-    color: whitesmoke;
+    top: 15%;
+    bottom: auto;
+    left: 0%;
+    right: auto;
+    padding: 25px 80px;
+    
+}
+
+.carousel-caption h5 { 
+    font-family: 'Prata', serif; 
     font-size: 30px;
-    padding: 20px 20px;
-    position: absolute; 
-    bottom: 600px;
-    text-align: center;
+    margin-bottom: auto; 
+    color: whitesmoke;
 }
 
-/* CSS Style for slideshow animations - Fading to next picture */
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-    from {
-        opacity: .4
-    } 
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    } 
-    to {
-        opacity: 1
-    }
-}
-/*-----------------------------------------------*/
-
-#navigationBarSlideshowSeparator {
-    width: 1000px;
-    margin-top: 15px;
-    margin-bottom: -5px;
-    opacity: 85%;
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    height: 50px;
     border: none;
-    background-color: #262626;
-    height: 5px;
+    width: 50px;
 }
