--- a/CSS/site.css
+++ b/CSS/site.css
@@ -103,3 +103,22 @@ context or relation to other document tree elements)
     padding-left: 50px;
     padding-right: 50px;
 }
+
+/*----------------------shop.html--------------------*/
+.card-title, p { 
+    font-family: 'Lato', sans-serif; 
+
+}
+
+.card-title { 
+    font-size: 35px;
+}
+
+.card-text { 
+    font-size: 18px;
+}
+
+/*-----------------------about.html-------------------*/
+.aboutCard { 
+    margin-top: 0px;
+}
